# evil-apple-juice-esp32-rs

./: .gitignore  Cargo.toml  README.md  README_cn.md  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: ble.rs  devices.rs  http.rs  main.rs
vue-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
vue-ui/src/: App.vue
